# mpack

./: CMakeLists.txt
cmake/: mpackConfig.cmake.in
src/: CMakeLists.txt
